--- a/index.html
+++ b/index.html
@@ -7,14 +7,29 @@
   </head>
   <body>
     <div class="item-request">
-      <input type="text"></type>
+      <input type="text" id="item-url"></input>
+      <input type="number" id="item-days" value="15"></input>
       <button>Search Item</button>
+      <div class="controls">
+          <div class="control">
+            <label>Moving Average 1:</label>
+            <input type="number" id="moving-average-n"></input>
+          </div>
+          <div class="control">
+            <label>Moving Average 2:</label>
+            <input type="number" id="moving-average-m"></input>
+          </div>
+        </div>
     </div>
     <div class="item-data">
-      <div class="pricing-chart-container" style="position: relative; width: 100%;">
-        <canvas id="pricing-chart" style="background-color:rgba(50, 50, 50, 1);"></canvas>
+      <div class="pricing-chart-container">
+        <canvas id="pricing-chart"></canvas>
       </div>
-      <p class="pricing-history"></p>
+      <div class="pricing-chart-extras">
+        <div class="summary">
+          <p class="pricing-history"></p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
