--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
         </div>
     </div>
     <div class="item-data">
-      <div class="pricing-chart-container">
+      <div class="pricing-chart-container" style="height: 50vh;">
         <canvas id="pricing-chart"></canvas>
+      </div>
+      <div class="rsi-chart-container" style="height: 20vh;">
+        <canvas id="rsi-chart"></canvas>
       </div>
       <div class="pricing-chart-extras">
         <div class="summary">
