added rsi option

--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
       <div class="controls">
           <div class="control">
             <label>Moving Average 1:</label>
-            <input type="number" id="moving-average-n"></input>
+            <input type="number" id="moving-average-n" placeholder=8></input>
           </div>
           <div class="control">
             <label>Moving Average 2:</label>
-            <input type="number" id="moving-average-m"></input>
+            <input type="number" id="moving-average-m" placeholder=24></input>
+          </div>
+          <div class="control">
+            <label>RSI:</label>
+            <input type="number" id="rsi" min=1 max=40 placeholder=14></input>
           </div>
         </div>
     </div>
